# parallel-planets

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildAndMpiRun.sh  buildInputGenerator.sh  imagesToGif.sh  imagesToVideo.sh  main.c  mpiRun.sh  runInputGenerator.sh
inputs/: 2body  gen4_in  gen8_in  gen_in  orig_in
inputs/mpi_config/: core_split  core_split2  core_split3
ray-tracing/: geometry.c  geometry.h  ray_trace.c  ray_trace.h
scripts/: build.sh  buildAndMpiRun.sh  imagesToGif.sh  imagesToVideo.sh  mpiRun.sh  runInputGenerator.sh  scaling_analysis.jl
src/: main.c
src/dynamics/: move.c  move.h
src/ray-tracing/: geometry.c  geometry.h  ray_trace.c  ray_trace.h
src/utils/: input_generator.c  io.c  io.h  mpi_utils.c  mpi_utils.h  scene.c  scene.h
tests/outputs/benchmarks/: benchmark_60000_0.010.csv  benchmark_60000_0.010_bodies.csv  benchmark_60000_0.010_height.csv
tests/scripts/: bodyScaling.sh  imageSize.sh  rtToDynamicRatio.sh  testBodyScaling  testBodyScaling.sh  testImageSizeScaling.sh  testNBodies4RT1DCores.sh  testRTToDynamicScaling.sh
